# sueweetstay-fullstack

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.dev  README.md  Url.md  build.sh  pyproject.toml  render.yaml
backend/bookings/: serializers.py
backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
backend/categories/: models.py  types.py  urls.py  views.py
backend/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
backend/common/: permissions.py
backend/config/: authentication.py  schema.py  settings.py  urls.py
backend/direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
backend/experiences/: admin.py  models.py  serializers.py  urls.py  views.py
backend/experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py  0004_alter_experience_city_alter_experience_country.py
backend/medias/: models.py  views.py
backend/medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
backend/reviews/: admin.py  models.py  types.py
backend/rooms/: admin.py  models.py  mutations.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
backend/users/: models.py  serializers.py  types.py  urls.py  views.py
backend/wishlists/: models.py  urls.py  views.py
(+43 files in other folders)
